--- a/src/components/universal/Footer.astro
+++ b/src/components/universal/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import OptimizedImage from "./home/OptimizedImage.astro";
+import OptimizedImage from "../home/OptimizedImage.astro";
 ---
 
 <footer class="bg-bg-secondary text-text-primary w-screen p-6 mt-12">
