--- a/src/components/universal/TopBar.astro
+++ b/src/components/universal/TopBar.astro
@@ -10,7 +10,7 @@ import {
   MoonStar,
   Sun,
 } from "@lucide/astro";
-import OptimizedImage from "./home/OptimizedImage.astro";
+import OptimizedImage from "../home/OptimizedImage.astro";
 
 const urls = [
   { href: "/terms", label: "Terms", icon: ReceiptText },
