--- a/src/pages/draft/manage.astro
+++ b/src/pages/draft/manage.astro
@@ -1,8 +1,9 @@
 ---
-import Category from "@/components/Category.astro";
-import PostScheduler from "@/components/PostScheduler";
-import SeoPreview from "@/components/searchPreview";
-import ThumbnailUploader from "@/components/ThumbnailUploader";
+
+import Category from "@/components/article/Category.astro";
+import PostScheduler from "@/components/article/PostScheduler";
+import SeoPreview from "@/components/article/searchPreview";
+import ThumbnailUploader from "@/components/article/ThumbnailUploader";
 import Layout from "@/layouts/Layout.astro";
 import langauges from "@/lib/languages";
 import { supabase } from "@/lib/supabase";
