--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
 import "../styles/global.css";
-import TopBar from "../components/TopBar.astro";
-import Footer from "../components/Footer.astro";
-import Toasts from "@/components/Toasts";
-import Loading from "@/components/Loading";
-import BreadCrumbs from "@/components/BreadCrumbs.astro";
-import Cookie from "@/components/Cookie.astro";
+import Toasts from "@/components/universal/Toasts";
+import Loading from "@/components/universal/Loading";
+import BreadCrumbs from "@/components/universal/BreadCrumbs.astro";
+import Footer from "@/components/universal/Footer.astro";
+import TopBar from "@/components/universal/TopBar.astro";
+import { Cookie } from "@lucide/astro";
 
 
 const cookies = Astro.cookies.get('theme')?.value ||  "light";
