--- a/src/pages/b/[category]/[slug]/index.astro
+++ b/src/pages/b/[category]/[slug]/index.astro
@@ -1,4 +1,5 @@
 ---
+import ListArticle from "@/components/article/ListArticle.astro";
 import OptimizedImage from "@/components/home/OptimizedImage.astro";
 import Layout from "@/layouts/Layout.astro";
 import { supabase } from "@/lib/supabase";
@@ -15,7 +16,7 @@ const { data: post, error } = await supabase
   .eq("status", "public")
   .or(`schedule.lte.${now},schedule.is.null`)
 
-if (error || !post) {
+if (error || post.length == null || post.length === 0) {
   return Astro.redirect("/404");
 }
 ---
@@ -35,6 +36,8 @@ if (error || !post) {
         <div class="mt-4 p-2" set:html={post[0]?.content_html}></div>
       </article>
     )}
+
+    <ListArticle/>
   </div>
 </Layout>
 
