--- a/src/pages/draft/editor.astro
+++ b/src/pages/draft/editor.astro
@@ -1,8 +1,8 @@
 ---
 import { supabase } from "@/lib/supabase";
-import ThumbnailUploader from "@/components/ThumbnailUploader";
+import ThumbnailUploader from "@/components/article/ThumbnailUploader";
 import Layout from "@/layouts/Layout.astro";
-import EditorPage from "@/components/Editor";
+import EditorPage from "@/components/article/Editor";
 
 let id = Astro.url.searchParams.get("id");
 let tr = Astro.url.searchParams.get("tr");
