--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Loading from "@/components/universal/Loading";
 import BreadCrumbs from "@/components/universal/BreadCrumbs.astro";
 import Footer from "@/components/universal/Footer.astro";
 import TopBar from "@/components/universal/TopBar.astro";
-import { Cookie } from "@lucide/astro";
+import Cookie from "@/components/universal/Cookie.astro";
 
 
 const cookies = Astro.cookies.get('theme')?.value ||  "light";
