--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -2,8 +2,8 @@
 import BreadCrumbs from "@/components/universal/BreadCrumbs.astro";
 import Footer from "@/components/universal/Footer.astro";
 import TopBar from "@/components/universal/TopBar.astro";
-import { Cookie } from "@lucide/astro";
 import "../styles/global.css";
+import Cookie from "@/components/universal/Cookie.astro";
 
 
 const cookies = Astro.cookies.get('theme')?.value ||  "light";
