--- a/src/pages/a/dashboard.astro
+++ b/src/pages/a/dashboard.astro
@@ -39,7 +39,7 @@ const emails: string[] = import.meta.env.EMAIL.split(",");
         <h1 class="text-3xl font-bold text-gray-900">Welcome back, {user.name} 👋</h1>
         <p class="text-gray-600">Manage your posts and account settings here.</p>
       </div>
-      <form action="api/auth/signout" method="get">
+      <form action="/api/auth/signout" method="get">
         <button class="bg-red-500 flex gap-3 hover:bg-red-600 text-white font-medium px-5 py-2 rounded-xl shadow">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out-icon lucide-log-out"><path d="m16 17 5-5-5-5"/><path d="M21 12H9"/><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/></svg>
           Logout
