--- a/src/components/home/Latest.astro
+++ b/src/components/home/Latest.astro
@@ -38,10 +38,10 @@ const { data: categories } = await supabase
           alt={mainArticle.slug} 
           class=" aspect-video" 
         />
-        <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent p-6 flex flex-col justify-end">
-          <h2 class="text-xl md:text-2xl font-bold text-white group-hover:text-blue-400 transition">
+        <div class="absolute inset-0 bg-gradient-to-t text-bg-primary from-text-primary/70 via-text-primary/30 to-transparent p-6 flex flex-col justify-end">
+          <p class="text-xl md:text-2xl font-bold text-bg-primary group-hover:text-blue-400 transition">
             {mainArticle.title}
-          </h2>
+          </p>
         </div>
       </a>
     )}
@@ -74,23 +74,22 @@ const { data: categories } = await supabase
     )}
 
     {categories && categories.length > 0 && (
-      <aside class="text-start flex gap-4 flex-col w-full">
+      <div class="text-start p-2 flex gap-2 flex-col w-full lg:col-span-2 rounded-xl shadow-md">
         <h3>Categories</h3>
         <ul>
           {categories.map((cat) => (
             
             <li>
-              {iconMap[cat.icon] && <Icon name={cat.icon} class="text-text-primary" />}
               <a 
                 href={`/b/${cat.slug}`} 
-                class="block text-sm text-gray-700 dark:text-gray-300 hover:text-blue-600 transition"
+                class=" w-full"
               >
-                {cat.title}
+               <p> {cat.title}</p>
               </a>
             </li>
           ))}
         </ul>
-      </aside>
+      </div>
     )}
 
     
