--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -2,7 +2,7 @@
 import BreadCrumbs from "@/components/universal/BreadCrumbs.astro";
 import Footer from "@/components/universal/Footer.astro";
 import TopBar from "@/components/universal/TopBar.astro";
-import "../styles/global.css";
+import "../styles/home.css";
 import Cookie from "@/components/universal/Cookie.astro";
 
 
