--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global=.css";
+import "../styles/global.css";
 import Toasts from "@/components/universal/Toasts";
 import Loading from "@/components/universal/Loading";
 import BreadCrumbs from "@/components/universal/BreadCrumbs.astro";
