--- a/src/pages/b/[category]/[slug]/index.astro
+++ b/src/pages/b/[category]/[slug]/index.astro
@@ -20,6 +20,7 @@ const { data: post, error } = await supabase
 if (error || post.length == null || post.length === 0) {
   return Astro.redirect("/404");
 }
+
 ---
 
 <Layout title={post[0]?.title || "Post"} keywords={post[0]?.keywords || post[0]?.slug} desc={post[0]?.desc || "Blog post"}>
@@ -55,7 +56,7 @@ if (error || post.length == null || post.length === 0) {
               <div class="flex justify-evenly gap-4">
                 <button class="cursor-pointer hover:bg-text-primary hover:text-bg-primary rounded-full p-2"><ThumbsUp/></button>
                 <button class="cursor-pointer hover:bg-text-primary hover:text-bg-primary rounded-full p-2"><ThumbsDown/></button>
-                <button class="cursor-pointer hover:bg-text-primary hover:text-bg-primary rounded-full p-2"><Share/></button>
+                <button id="share" class="cursor-pointer hover:bg-text-primary hover:text-bg-primary rounded-full p-2"><Share/></button>
 
               </div>
               </div>
