--- a/src/components/universal/Footer.astro
+++ b/src/components/universal/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import OptimizedImage from "../home/OptimizedImage.astro";
+const LOGO = import.meta.env.LOGO || "/logo.ico";
 ---
 
 <footer class="bg-bg-secondary text-text-primary w-screen p-6 mt-12">
@@ -8,7 +9,7 @@ import OptimizedImage from "../home/OptimizedImage.astro";
   >
     <div class="flex flex-col items-center md:items-start gap-1">
       <div class="flex items-center gap-3">
-        <OptimizedImage src="/logo.ico" alt="EchoBlog Logo" class="w-10 h-10 rounded-full" />
+        <OptimizedImage src={LOGO} alt="EchoBlog Logo" class="w-10 h-10 rounded-full" />
         <h3 class="text-2xl font-semibold">{import.meta.env.NAME}</h3>
       </div>
       <p class="text-sm text-text-secondary italic">
