--- a/src/components/universal/TopBar.astro
+++ b/src/components/universal/TopBar.astro
@@ -25,6 +25,7 @@ const {
 
 const avatar = user?.user_metadata?.avatar_url || "/default-avatar.png";
 const displayName = user?.user_metadata?.full_name || user?.email || "Guest";
+const LOGO = import.meta.env.LOGO || "/logo.ico";
 ---
 
 <nav
@@ -35,7 +36,7 @@ const displayName = user?.user_metadata?.full_name || user?.email || "Guest";
     aria-label="Home"
     class="flex items-center gap-2 text-2xl font-semibold text-text-primary"
   >
-    <OptimizedImage src="/logo.ico" alt="logo" class="w-10 h-10 rounded-full" />
+    <OptimizedImage src={LOGO} alt="logo" class="w-10 h-10 rounded-full" />
     <h2>{import.meta.env.NAME}</h2>
   </a>
   <div class="flex gap-4">
